--- a/index.html
+++ b/index.html
@@ -999,7 +999,44 @@ h1::after {
     font-size: 7px;
   }
 }
-
+/* ===== FONDO PARA VISTA MÓVIL ===== */
+@media (max-width: 768px) {
+  #mobileView {
+    position: relative;
+    background-image: url('chango.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+  }
+  
+  #mobileView::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.7); /* Capa blanca semi-transparente para mejor legibilidad */
+    z-index: 0;
+  }
+  
+  #mobilePersonList {
+    position: relative;
+    z-index: 1; /* Asegura que las tarjetas estén sobre el fondo */
+  }
+  
+  .mobile-person-card {
+    background: rgba(255, 255, 255, 0.85); /* Fondo semi-transparente para mejor legibilidad */
+    backdrop-filter: blur(5px); /* Efecto de desenfoque para mayor legibilidad */
+  }
+  
+  /* Ajustar la marca de agua existente para móvil */
+  body::before {
+    background-image: none; /* Ocultar marca de agua en móvil si es muy intrusiva */
+  }
+}
 </style>
 </head>
 
