--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@ h1::after {
     position: relative;
     background-image: url('chango.jpg');
     background-size: cover;
-    background-position: center center;
+    background-position: center 50px;
     background-attachment: fixed;
     background-repeat: no-repeat;
     min-height: 100vh;
